Fri Feb 25 16:20:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Headers/AppKit/NSWindow.h: added has_closed flag
	* Source/NSWindow.m: made close/deallocation sequence more robust
	* Source/NSApplication.m: improve removal of windows from menus
	on close.

2000-02-25  Adam Fedor  <fedor@gnu.org>

	* Source/NSCursor.m ([NSCursor -setImage:]): Implement.

Fri Feb 25 07:07:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSWorkspace.m: Removed a little unused code and fixed a
	minor portabilitym problem with path usage.

Tue Feb 22 17:51:52 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	Still much to do in the font classes, but thanks to Fred Kiefer
	things are starting to work.

	Contributed by Fred Kiefer <FredKiefer@gmx.de>:
	* Headers/AppKit/NSFontManager.h: Fixed typo in ivar name.
	* Source/NSFontManager.m: More work on this class.
	* Source/NSFontPanel.m: Almost complete rewrite.
	* Headers/AppKit/NSFontPanel.h: Idem.  
	
Mon Feb 21 14:40:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSWindow.m: ([-close]) remove spurious retain.
	* Source/NSApplication.m: ([-run]) do startup stuff inside an
	autorelease pool and release it before main loop.

Tue Jan 25 14:52:27 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	Contributed by Fred Kiefer:
	* Source/NSFontManager.m: Almost complete rewrite.
	* Source/NSFontPanel.m: Begun work of fixing, rewriting.
	* Headers/AppKit/NSFontManager.h: Corresponding rewrite.
	* Headers/AppKit/NSFontPanel.h: Idem.
	
2000-02-17  Adam Fedor  <fedor@gnu.org>

	* Version: 0.6.5 released.

2000-02-16  Adam Fedor  <fedor@gnu.org>

	* gnustep-gui.spec: Newfile

2000-02-15  Adam Fedor  <fedor@gnu.org>

	* configure.in: Fix test for rintf

2000-02-14  Adam Fedor  <fedor@gnu.org>

	* Version: Update version number
	* Documentation/announce.tmpl.texi: Update
	* Documentation/readme.tmpl.texi: Likewise.
	* Documentation/news.tmpl.texi: Likewise.
	* Documentation/todo.tmpl.texi: Likewise.